YamlDefination/pod-defination.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp


spec:
  containers:
    - name: nginx-container
      image: nginx
