YamlDefination/secrets.yaml
# kubectl create secret generic db-secret --from-literal=DB_Host=sql01 \
#                                         --from-literal=DB_User=root \
#                                         --from-literal=DB_Password=password123
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: webapp-pod
  name: webapp-pod
  namespace: default
spec:
  containers:
  - image: kodekloud/simple-webapp-mysql
    imagePullPolicy: Always
    name: webapp
